Fix aboutpage overflow issue

--- a/src/scss/AboutPage.scss
+++ b/src/scss/AboutPage.scss
@@ -14,7 +14,6 @@
   }
 
   &__experience-container {
-    $self: &;
     transform: translateX(-150%);
     animation: slide 1.2s forwards;
 
@@ -28,8 +27,9 @@
   &__skills-container {
     .about__skills-title {
       border-bottom: 1px solid rgba(255, 255, 255, 0.4);
-      transform: translateX(-150%);
-      animation: slide 1.2s forwards;
+      opacity: 0;
+      animation: appear 1.5s forwards;
+      animation-delay: 0.5s;
     }
 
     .about__skills-list {
@@ -39,31 +39,32 @@
       justify-content: space-evenly;
 
       .about__skills-item {
-        transform: translateY(500px);
-        animation: slide-up 1s forwards;
+        opacity: 0;
+        animation: appear 1.5s forwards;
+        animation-delay: 0.5s;
 
         &:nth-of-type(1) {
-          animation-delay: 0.5s;
+          animation-delay: 0.4s;
         }
 
         &:nth-of-type(2) {
-          animation-delay: 0.6s;
+          animation-delay: 0.5s;
         }
 
         &:nth-of-type(3) {
-          animation-delay: 0.7s;
+          animation-delay: 0.6s;
         }
 
         &:nth-of-type(4) {
-          animation-delay: 0.8s;
+          animation-delay: 0.7s;
         }
 
         &:nth-of-type(5) {
-          animation-delay: 0.9s;
+          animation-delay: 0.8s;
         }
 
         &:nth-of-type(6) {
-          animation-delay: 1s;
+          animation-delay: 0.9s;
         }
       }
 
@@ -74,12 +75,12 @@
   }
 }
 
-@keyframes slide-up {
+@keyframes appear {
   0% {
-    transform: translateY(500px);
+    opacity: 0;
   }
 
   100% {
-    transform: translateY(0);
+    opacity: 1;
   }
 }
